src/test/resources/testinput/parsable/symtab/invalid_coco/invalidInvariantStartsWithCapitalLetter.ocl
/* (c) https://github.com/MontiCore/monticore */

ocl invalidInvariantStartsWithCapitalLetter {
  context Auction a
  inv test: true;
}